# yarp-with-moveit

./: .gitignore  README.md
old_code/ros_code/: talker.cpp
ros_code/miguel_vislab/: CMakeLists.txt  package.xml
ros_code/miguel_vislab/msg/: FinalPosition.msg  SimpleJointTrajectoryPoint  SimpleTrajectory.msg
ros_code/miguel_vislab/src/: drive_base.cpp  dummie_controller.cpp  listener.cpp  listener_problem.cpp  moveit_interface.cpp  moveit_trajectory_publisher.cpp  planner.cpp  redirect_costmap.cpp  talker.cpp  vizzy_joint_publisher.cpp
yarp_code/: CMakeLists.txt  SimpleJointTrajectoryPoint  SimpleJointTrajectoryPoint.h  SimpleTrajectory  SimpleTrajectory.h  apply_trajectory.cpp  apply_trajectory_direct.cpp  apply_trajectory_problem.cpp  run_planner.sh  serious_message_error.cpp  vizzy_joint_publisher.cpp  yarp_joint_publisher.cpp
yarp_code/old_code/ros_publishers/: yarp_joint_publisher_icub.cpp
