<?xml version="1.0"?>
<package>
  <name>miguel_vislab</name>
  <version>0.0.0</version>
  <description>Miguel ROS package on VISLAB</description>

  <maintainer email="miguelaragao91@gmail.com">Miguel Aragao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
